# human-design

./: .gitignore  GEMINI.md  README.md  STATUS.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: ManifestoContent.tsx  ManifestoEditor.tsx  Mascot.tsx  Navigation.tsx  Player.tsx
app/manifesto/: page.tsx
app/manifestos/: page.tsx
backend/: alembic.ini  database.py  main.py  models.py
backend/alembic/: env.py
backend/alembic/versions/: 1a13761cd499_add_human_design_fields_to_user_.py  de2d63b91446_create_user_manifestos_table.py
backend/human_design_lib/: bodygraph.py  calculator.py  chart_analyzer.py  gate_mapping.py  models.py  pyproject.toml  test_human_design.py
lib/: utils.ts
scripts/: deploy_fastapi_service.sh  deploy_frontend_service.sh  deploy_test_env.sh  stop_test_env.sh
