[project]
name = "human_design_lib"
version = "0.1.0"
description = "A Python library for Human Design chart calculations."
authors = [{ name = "Gemini", email = "gemini@google.com" }]
dependencies = [
    "kerykeion",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {"where" = ["."], "include" = ["human_design_lib*"]}
